--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-mobile-app",
   "version": "0.1.0",
   "private": true,
+  "build": "CI=false react-scripts build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
